--- a/src/.env.example
+++ b/src/.env.example
@@ -1,3 +1,7 @@
 APP_NAME="multi-model-RAG"
 APP_VERSION="0.1"
 OPENAI_API_KEY="YOUR_OPENAI_API_KEY"
+
+FILE_ALLOWED_TYPES=
+FILE_MAX_SIZE=10 # MB
+FILE_DEFAULT_CHUNCK_SIZE=512000 # KB
