--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -4,4 +4,16 @@ python-multipart==0.0.20
 python-dotenv==1.0.1
 pydantic-settings==2.8.1
 aiofiles==24.1.0
-
+langchain==0.3.21
+langchain-community==0.3.20
+langchain-unstructured==0.1.6
+unstructured[pdf]==0.17.2
+pdf2image==1.17.0
+pytesseract==0.3.10
+unstructured-inference==0.8.10
+transformers==4.35.0
+opencv-python-headless==4.7.0.72
+tiktoken==0.5.1
+tokenizers==0.14.1
+huggingface-hub==0.17.3
+accelerate==0.22.0
