--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -11,9 +11,11 @@ unstructured[pdf]==0.17.2
 pdf2image==1.17.0
 pytesseract==0.3.10
 unstructured-inference==0.8.10
-transformers==4.35.0
+transformers==4.41.0
 opencv-python-headless==4.7.0.72
 tiktoken==0.5.1
-tokenizers==0.14.1
-huggingface-hub==0.17.3
+tokenizers==0.19
+huggingface-hub==0.23.0
 accelerate==0.22.0
+groq==0.22.0
+sentence-transformers==4.1.0
