--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -7,10 +7,16 @@ services:
     ports:
       - "27017:27017"
     volumes:
-      - ./mongodb:/data/db
+      - mongodata:/data/db
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
     networks:
       - backend
     restart: always
 
 networks:
   backend:
+
+volumes:
+  mongodata:
