--- a/src/.env.example
+++ b/src/.env.example
@@ -1,23 +1,25 @@
 APP_NAME="multi-model-RAG"
 APP_VERSION="0.1"
 
-FILE_ALLOWED_TYPES=
+FILE_ALLOWED_TYPES="application/pdf,text/plain,image/jpeg,image/png,image/jpg"
 FILE_MAX_SIZE=10 # MB
 FILE_DEFAULT_CHUNCK_SIZE=512000 # KB
 
 # ========================= LLM Config =========================
 GENERATION_BACKEND = "GROQ"
 EMBEDDING_BACKEND = "HuggingFace"
+
 OPENAI_API_KEY=""
 OPENAI_API_URL=
-
 GROQ_API_KEY=""
 HuggingFace_API_KEY=""
+OVHCloud_API_KEY=""
+GITHUB_TOKEN=""
 
 GENERATION_MODEL_ID=""
 EMBEDDING_MODEL_ID=""
-EMBEDDING_MODEL_SIZE=384
+EMBEDDING_MODEL_SIZE=
 
-INPUT_DAFAULT_MAX_CHARACTERS=1024
-GENERATION_DAFAULT_MAX_TOKENS=200
-GENERATION_DAFAULT_TEMPERATURE=0.1
+INPUT_DEFAULT_MAX_CHARACTERS=1024
+GENERATION_DEFAULT_MAX_TOKENS=200
+GENERATION_DEFAULT_TEMPERATURE=0.1
