add vectorDB factory

--- a/src/.env.example
+++ b/src/.env.example
@@ -5,6 +5,9 @@ FILE_ALLOWED_TYPES="application/pdf,text/plain,image/jpeg,image/png,image/jpg"
 FILE_MAX_SIZE=10 # MB
 FILE_DEFAULT_CHUNCK_SIZE=512000 # KB
 
+
+MONGODB_URL=""
+MONGODB_DATABASE=""
 # ========================= LLM Config =========================
 GENERATION_BACKEND = "GROQ"
 EMBEDDING_BACKEND = "HuggingFace"
@@ -23,3 +26,8 @@ EMBEDDING_MODEL_SIZE=
 INPUT_DEFAULT_MAX_CHARACTERS=1024
 GENERATION_DEFAULT_MAX_TOKENS=200
 GENERATION_DEFAULT_TEMPERATURE=0.1
+
+# ========================= VectorDB Config =========================
+VECTOR_DB_BACKEND="QDRANT"
+VECTOR_DB_PATH="qdrant_db"
+VECTOR_DB_DISTANCE_METHOD="cosine"
