--- a/src/.env.example
+++ b/src/.env.example
@@ -14,6 +14,10 @@ EMBEDDING_BACKEND = "HuggingFace"
 
 OPENAI_API_KEY=""
 OPENAI_API_URL=
+OPENAI_API_VERSION=
+AZURE_OPENAI_API_KEY=
+AZURE_OPENAI_ENDPOINT=
+AZURE_OPENAI_API_VERSION=
 GROQ_API_KEY=""
 HuggingFace_API_KEY=""
 OVHCloud_API_KEY=""
