--- a/src/.env.example
+++ b/src/.env.example
@@ -35,3 +35,7 @@ GENERATION_DEFAULT_TEMPERATURE=0.1
 VECTOR_DB_BACKEND="QDRANT"
 VECTOR_DB_PATH="qdrant_db"
 VECTOR_DB_DISTANCE_METHOD="cosine"
+
+# ====================== Template Config =========================
+PRIMARY_LANGUAGE = "eng"
+DEFAULT_LANGUAGE = "eng"
