change embedding model to cohere-embed-4

--- a/src/.env.example
+++ b/src/.env.example
@@ -22,6 +22,8 @@ GROQ_API_KEY=""
 HuggingFace_API_KEY=""
 OVHCloud_API_KEY=""
 GITHUB_TOKEN=""
+GITHUB_ENDPOINT=
+VOYAGE_AI_KEY=
 
 GENERATION_MODEL_ID=""
 EMBEDDING_MODEL_ID=""
