add user authentication

--- a/src/.env.example
+++ b/src/.env.example
@@ -8,6 +8,8 @@ FILE_DEFAULT_CHUNCK_SIZE=512000 # KB
 
 MONGODB_URL=""
 MONGODB_DATABASE=""
+
+SECRET_KEY=
 # ========================= LLM Config =========================
 GENERATION_BACKEND = "GROQ"
 EMBEDDING_BACKEND = "HuggingFace"
