--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -25,3 +25,6 @@ azure-core==1.31.0
 azure-ai-inference==1.0.0b9
 qdrant-client==1.14.2
 voyageai==0.3.2
+passlib
+python-jose[cryptography]
+email-validator
